--- a/src/frontend/wwwroot/appsettings.json
+++ b/src/frontend/wwwroot/appsettings.json
@@ -1,5 +1,5 @@
 {
     "AppSettings": {
-    "STRAPI_API_URL": "http://localhost:1337/api" 
+    "STRAPI_API_URL": "http://localhost:1337" 
     }
 }
